# HydrometeorSynth

./: ARCHITECTURE.md  LICENSE  PROJECT_CHARTER.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PROJECT_CHARTER.md
docs/architechture/: DECISIONS.md
src/hydrometeorsynth/: orientation.py  particle.py  position.py
src/hydrometeorsynth/geometry/: base.py  cube.py  hexagonal_plate.py  sphere.py
tests/: test_cube.py  test_geometry.py  test_hexagonal_plate.py  test_orientation.py  test_particle.py  test_position.py  test_sphere.py
