[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrometeorsynth"
version = "0.1.0"
description = "Synthetic multi-view hydrometeor image generation for machine learning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]

dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]